[gd_scene load_steps=24 format=2]

[ext_resource path="res://game/pve/PVECombat.gd" type="Script" id=1]
[ext_resource path="res://public/image/world2/world2 bg.jpg" type="Texture" id=2]
[ext_resource path="res://game/interface/character/charAttack.tscn" type="PackedScene" id=3]
[ext_resource path="res://public/fonts/soupofjustice.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://public/image/world2/menu.png" type="Texture" id=5]
[ext_resource path="res://game/interface/boss/world2/bossAttack.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/interface/lifebar/Hit Box.tscn" type="PackedScene" id=7]
[ext_resource path="res://public/image/world2/QuizBG.png" type="Texture" id=8]
[ext_resource path="res://public/image/world2/4Z_2101.w017.n001.354B.p15.354-removebg-preview copy 3.png" type="Texture" id=9]
[ext_resource path="res://public/image/world2/4Z_2101.w017.n001.354B.p15.354-removebg-preview copy 2.png" type="Texture" id=10]
[ext_resource path="res://public/image/world2/4Z_2101.w017.n001.354B.p15.354-removebg-preview copy.png" type="Texture" id=11]
[ext_resource path="res://public/image/world2/4Z_2101.w017.n001.354B.p15.354-removebg-preview copy 4.png" type="Texture" id=12]
[ext_resource path="res://game/interface/lifebar/lifebar.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "bossAttack"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 104 ), Vector2( -700, 104 ), Vector2( -700, -400 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -72.0, -108.0, -144.0, -180.0, -216.0, -252.0, -288.0, -324.0, -360.0 ]
}

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="GDScript" id=5]
script/source = "extends Control

func _ready():
	pass # Replace with function body.



func _on_CloseButton_pressed():
	get_tree().change_scene(\"res://game/gameselection/world2/world2Section.tscn\") 
"

[sub_resource type="DynamicFont" id=6]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
one_shot = true

[node name="QuestionTimer" type="Timer" parent="."]

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionTimerLabel" type="Label" parent="."]
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 80.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionBox" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="QuestionBox"]
modulate = Color( 0.352941, 0.215686, 0.0627451, 0.54902 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 432.0
margin_right = 1240.0
margin_bottom = 755.0
rect_clip_content = true
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RespondLabel" type="Label" parent="QuestionBox"]
margin_top = 476.0
margin_right = 1280.0
margin_bottom = 716.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer1" type="TextureButton" parent="QuestionBox"]
margin_left = 200.0
margin_top = 560.0
margin_right = 560.0
margin_bottom = 640.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="QuestionBox/Answer1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -20.0
margin_right = 75.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.352941, 0.215686, 0.0627451, 1 )
align = 3
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer2" type="TextureButton" parent="QuestionBox"]
margin_left = 750.0
margin_top = 560.0
margin_right = 1110.0
margin_bottom = 640.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="QuestionBox/Answer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.5
margin_top = -20.0
margin_right = 60.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.352941, 0.215686, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer3" type="TextureButton" parent="QuestionBox"]
margin_left = 200.0
margin_top = 640.0
margin_right = 560.0
margin_bottom = 720.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="QuestionBox/Answer3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -20.0
margin_right = 42.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.352941, 0.215686, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer4" type="TextureButton" parent="QuestionBox"]
margin_left = 750.0
margin_top = 640.0
margin_right = 1110.0
margin_bottom = 720.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="QuestionBox/Answer4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.5
margin_top = -20.0
margin_right = 60.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.352941, 0.215686, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="RichTextLabel" parent="QuestionBox"]
margin_left = 10.0
margin_top = 488.606
margin_right = 1280.0
margin_bottom = 558.606
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Q1: BAlabala"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossLifeBar" parent="." instance=ExtResource( 13 )]
margin_left = 870.0
margin_top = 190.0
margin_right = -410.0
margin_bottom = -530.0

[node name="CharLifeBar" parent="." instance=ExtResource( 13 )]
margin_left = 120.0
margin_top = 190.0
margin_right = -1160.0
margin_bottom = -530.0

[node name="character" type="VBoxContainer" parent="."]
margin_left = 144.0
margin_top = 225.0
margin_right = 294.0
margin_bottom = 375.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charAttack" parent="character" instance=ExtResource( 3 )]

[node name="boss" type="VBoxContainer" parent="."]
margin_left = 900.0
margin_top = 225.0
margin_right = 1050.0
margin_bottom = 375.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bossAttack" parent="boss" instance=ExtResource( 6 )]
position = Vector2( -700, 104 )
rotation = -6.28319

[node name="AnimationPlayer" type="AnimationPlayer" parent="boss/bossAttack"]
anims/bossAttack = SubResource( 3 )

[node name="Hit Box" parent="boss/bossAttack/AnimationPlayer" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="boss/bossAttack/AnimationPlayer/Hit Box" index="0"]
position = Vector2( 216, 328 )
shape = SubResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 77.0
margin_bottom = 77.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Popup"]
modulate = Color( 0.0117647, 0.309804, 0.478431, 1 )
self_modulate = Color( 0.0117647, 0.309804, 0.478431, 1 )
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0117647, 0.309804, 0.478431, 0.505882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.0
margin_top = -243.0
margin_right = 248.0
margin_bottom = 243.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Popup/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -126.0
margin_right = 75.0
margin_bottom = -46.0
texture_normal = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup/TextureRect/CloseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.5
margin_top = -19.5
margin_right = 51.5
margin_bottom = 19.5
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.352941, 0.215686, 0.0627451, 1 )
text = "Close"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry" type="Button" parent="Popup/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -163.0
margin_top = 100.0
margin_right = 9.0
margin_bottom = 161.0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="Popup/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -61.0
margin_right = 7.00002
margin_bottom = 1.52588e-05
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PVP_Title" type="TextureRect" parent="Popup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -191.5
margin_top = 48.0
margin_right = 191.5
margin_bottom = 208.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Popup/PVP_Title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.5
margin_top = -24.0
margin_right = 69.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.396078, 0.12549, 0.0156863, 1 )
text = "Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countdown" type="Popup" parent="Popup"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Popup/countdown"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup/countdown"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 520.0
margin_top = 300.0
margin_right = 720.0
margin_bottom = 380.0
align = 1

[node name="lose" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="lose"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1240.0
margin_bottom = 680.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="lose"]
anchor_left = 16.075
anchor_top = 9.6
anchor_right = 16.075
anchor_bottom = 9.6
margin_left = -195.0
margin_top = -216.0
margin_right = 195.0
margin_bottom = 170.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="lose/TextureRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -80.0
texture_normal = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="lose/TextureRect/Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.8157
margin_top = -19.5
margin_right = 52.1843
margin_bottom = 19.5
rect_min_size = Vector2( 103, 39 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.352941, 0.215686, 0.0627451, 1 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Try Again" type="TextureButton" parent="lose/TextureRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -80.0
margin_right = 150.0
texture_normal = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="lose/TextureRect/Try Again"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -19.5
margin_right = 61.5
margin_bottom = 19.5
rect_min_size = Vector2( 103, 39 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.352941, 0.215686, 0.0627451, 1 )
text = "Try Again"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="lose/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -122.0
margin_top = -101.0
margin_right = 122.0
margin_bottom = 4.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="lose/TextureRect/Title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -16.0
margin_right = 66.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.352941, 0.215686, 0.0627451, 1 )
text = "You LOSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="lose/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -16.0
margin_right = 43.5
margin_bottom = 16.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="win"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1240.0
margin_bottom = 680.0
color = Color( 0, 0, 0, 0.501961 )

[node name="TextureRect" type="TextureRect" parent="win"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 428.0
margin_top = 148.0
margin_right = 818.0
margin_bottom = 534.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next Button" type="TextureButton" parent="win/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -80.0
margin_right = 75.0
texture_normal = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="win/TextureRect/Next Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.8157
margin_top = -19.5
margin_right = 52.1843
margin_bottom = 19.5
rect_min_size = Vector2( 103, 39 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.352941, 0.215686, 0.0627451, 1 )
text = "NEXT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="win/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -122.0
margin_top = -101.0
margin_right = 122.0
margin_bottom = 4.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="win/TextureRect/Title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -16.0
margin_right = 66.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.352941, 0.215686, 0.0627451, 1 )
text = "You win"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="win/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -16.0
margin_right = 43.5
margin_bottom = 16.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="QuestionTimer" to="." method="_on_QuestionTimer_timeout"]
[connection signal="pressed" from="QuestionBox/Answer1" to="." method="_on_Answer_pressed"]
[connection signal="pressed" from="QuestionBox/Answer2" to="." method="_on_Answer_pressed"]
[connection signal="pressed" from="QuestionBox/Answer3" to="." method="_on_Answer_pressed"]
[connection signal="pressed" from="QuestionBox/Answer4" to="." method="_on_Answer_pressed"]
[connection signal="area_entered" from="boss/bossAttack/AnimationPlayer/Hit Box" to="." method="_on_Hit_Box_area_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Popup/TextureRect/CloseButton" to="." method="_on_CloseButton_pressed"]

[editable path="boss/bossAttack/AnimationPlayer/Hit Box"]
